external-crates/move/crates/move-compiler/tests/move_check/unit_test/cross_module_members_non_test_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC03004]: unbound type
   ┌─ tests/move_check/unit_test/cross_module_members_non_test_function.move:23:23
   │
23 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[EC03002]: unbound module
   ┌─ tests/move_check/unit_test/cross_module_members_non_test_function.move:24:9
   │
24 │         A::build_foo()
   │         ^ Unbound module alias 'A'
